ccdt-deployment/ccdt-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ccdt-service
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    app: nginx-ccdt
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
