ccdt-deployment/ccdt-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ccdt-route
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  to:
    kind: Service
    name: ccdt-service
  tls: null
  path: /external
  port:
    targetPort: 8080
